--- a/stylesheets/redlove/base.css
+++ b/stylesheets/redlove/base.css
@@ -89,7 +89,7 @@ blockquote, q {
 }
 blockquote:before, blockquote:after,
 q:before, q:after {
-	content: '';
+	content: "";
 	content: none;
 }
 table {
@@ -308,7 +308,7 @@ q {
 }
 q:before,
 q:after {
-	content: '';
+	content: "";
 	content: none;
 }
 
