Pill button style Clean up style usage New layout examples area

--- a/stylesheets/redlove/base.css
+++ b/stylesheets/redlove/base.css
@@ -328,10 +328,11 @@ hr {
 	Text elements - Links
 ---------------------------------------- */
 a {
-	color:blue;
+	color: blue;
+	color: currentColor;
 	color: inherit;
-	text-decoration:underline;
-	outline:0;
+	text-decoration: underline;
+	outline: 0;
 }
 a:focus {
 	outline: thin dotted;
