I've started chasing theming ideas and configuration instead of just one theme and then creating a separate structure to showcase various layouts in different situations. This makes it way more convoluted from the simple site templating structure I had in mind, but opens up flexibility and opportunities... we'll see how this goes.

--- a/markup/site/includes/themes/two/stylesheets/site.css
+++ b/markup/site/includes/themes/two/stylesheets/site.css
@@ -14,7 +14,7 @@ body {
 ------------------------------------------------------------ */
 
 .band-header {
-	background: #16A8EA url("../../images/layouts/blue-abstract-background.jpg") scroll no-repeat 0 0;
+	background: #16A8EA url("../images/blue-abstract-background.jpg") scroll no-repeat 0 0;
 	color: #ffffff;
 }
 
@@ -84,7 +84,7 @@ section.content p {
 ------------------------------------------------------------ */
 
 .band-background {
-	background: #16A8EA url("../../images/layouts/blue-abstract-background.jpg") scroll no-repeat 50% 50%;
+	background: #16A8EA url("../images/blue-abstract-background.jpg") scroll no-repeat 50% 50%;
 	color: #ffffff;
 }
 
