Updated email markup

--- a/markup/site/includes/themes/one/stylesheets/site.css
+++ b/markup/site/includes/themes/one/stylesheets/site.css
@@ -1,29 +1,65 @@
-/* ------------------------------------------------------------
-	Body
------------------------------------------------------------- */
+/* Put real @imports above this line - Google Fonts, etc. */
+
+
+/* ============================================================
+	# Foundation
+============================================================ */
+
+/* --------------------------------------------------------------------------------
+	## Typography
+-------------------------------------------------------------------------------- */
 
 body {
 	color: #666666;
 }
+
+
+/* ============================================================
+	# Color Glossary
+============================================================ */
+
+
+
+/* ============================================================
+	# Site Styles
+============================================================ */
+
+/* --------------------------------------------------------------------------------
+	## Body and Liner
+-------------------------------------------------------------------------------- */
+
+/* Set as the color of the <footer> so non-scrollable area below it looks like part of the <footer> */
+body,
+.band-footer {
+	background: #e6e6e6;
+}
+
+/* Set as the desired <body> color; it is layered on top of the real <body> */
 .body-liner {
 	background: #ffffff;
 }
 
+/* --------------------------------------------------------------------------------
+	## Band, Wrap, and Liner
+-------------------------------------------------------------------------------- */
+
+/* 
+	Band modifiers
+---------------------------------------- */
+
+.band--zebra {
+	background: #f5f5f5;
+	border-bottom: 1px solid #e1e8ed;
+	border-top: 1px solid #e1e8ed;
+}
+
+/* --------------------------------------------------------------------------------
+	## Navigation
+-------------------------------------------------------------------------------- */
+
 /* ------------------------------------------------------------
-	Header
+	Primary navigation
 ------------------------------------------------------------ */
-
-.band-header {
-	background: #16A8EA url("../images/blue-abstract-background.jpg") scroll no-repeat 0 0;
-	color: #ffffff;
-}
-
-.logo {
-	font-size: 2.2em;
-}
-.logo a {
-	text-decoration: none;
-}
 
 .nav-primary {
 	text-align: right;
@@ -45,6 +81,10 @@ body {
 	background-color: rgba(22, 168, 234, 0.8);
 }
 
+/* ------------------------------------------------------------
+	Mobile menu
+------------------------------------------------------------ */
+
 .mobile-menu {
 	color: #666666;
 }
@@ -57,23 +97,25 @@ body {
 	font-size: 1.5em;
 }
 
-/* ------------------------------------------------------------
-	Bands
------------------------------------------------------------- */
+/* --------------------------------------------------------------------------------
+	## Header
+-------------------------------------------------------------------------------- */
 
-.band--zebra {
-	background: #f5f5f5;
-	border-bottom: 1px solid #e1e8ed;
-	border-top: 1px solid #e1e8ed;
+.band-header {
+	background: #16A8EA url("../images/blue-abstract-background.jpg") scroll no-repeat 0 0;
+	color: #ffffff;
 }
 
-/* ------------------------------------------------------------
-	Lead-in Band
------------------------------------------------------------- */
+.logo {
+	font-size: 2.2em;
+}
+.logo a {
+	text-decoration: none;
+}
 
-/* ------------------------------------------------------------
-	Content
------------------------------------------------------------- */
+/* --------------------------------------------------------------------------------
+	## Content
+-------------------------------------------------------------------------------- */
 
 section.content h2 {
 	color: #afafaf;
@@ -83,8 +125,13 @@ section.content p {
 	line-height: 1.8;
 }
 
+
+/* ============================================================
+	# Page Styles
+============================================================ */
+
 /* ------------------------------------------------------------
-	Topic Columns
+	Topics Band
 ------------------------------------------------------------ */
 
 .band-topics i {
@@ -114,13 +161,4 @@ section.content p {
 	
 	font-size: 3.5em;
 	padding: 1.0em;
-}
-
-/* ------------------------------------------------------------
-	Footer
------------------------------------------------------------- */
-
-body,
-.band-footer {
-	background: #e6e6e6;
 }
